--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "i": "^0.3.7",
     "mediasoup": "^3.16.8",
+    "nodemon": "^3.1.10",
     "npm": "^11.5.1",
     "socket.io": "^4.8.1"
   },
@@ -25,6 +26,7 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^24.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
