--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
+  
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","./server/**/*"],
   "exclude": ["node_modules"]
 }
