Refactor code structure for improved readability and maintainability

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "CommonJS", // Changed from ESNext
     "moduleResolution": "node",
     "moduleDetection": "force",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "rootDir": "./"
   },
-  "include": ["./"]
+  "include": ["./"],
+  "exclude": ["node_modules", "dist"]
 }
